# resil

./: README.md
src/: App.svelte
src-tauri/: Cargo.toml
src-tauri/src/: main.rs
src/components/: Controls.svelte  Playlist.svelte
src/lib/: storage.ts
