[package]
name = "resilience-player"
version = "0.1.0"
edition = "2021"


[dependencies]
# Tauri v2
tauri = { version = "2", features = ["macos-private-api", "shell-open"] }
# Native audio
rodio = "0.17"
# Async/runtime helpers
tokio = { version = "1", features = ["full"] }
# Serialization for IPC
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Concurrency & logging
once_cell = "1"
thiserror = "1"
log = "0.4"


[build-dependencies]
# (Optional) if you use tauri-build in the future
# tauri-build = { version = "2" }